# studiwize

./: .gitignore  AGENTS.md  Dockerfile  README.md  flake.nix  index.html  justfile  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  privacy.html  pyproject.toml  robots.txt
apps/landing/: .dockerignore  404.html  index.html  package.json  sitemap.xml  terms.html
apps/web/src/app/api/jobs/: route.ts
apps/web/src/app/api/jobs/[id]/events/: route.ts
lib/: brand.css  landing.css  landing.js
scripts/: generate-og.js
services/worker/: README.md  pyproject.toml
services/worker/src/studiwize_worker/: main.py  models.py  store.py
services/worker/tests/: test_jobs.py
