[project]
name = "studiwize-worker"
version = "0.0.0"
description = "Thin FastAPI service wrapping packages/pipeline — job contract for the Node BullMQ layer (D-007/D-008)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.7",
    "studiwize-pipeline",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.uv.sources]
studiwize-pipeline = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/studiwize_worker"]

[tool.ruff]
line-length = 100
target-version = "py311"
